# src/controllers/AuthController.ts
@@ -13,6 +13,7 @@ const factory = authFactory()
 export interface IAuthControllerHttpMethods extends IControllerHttpMethods{
   login(req: Request, res: Response, next: NextFunction): Promise<Response<any>>
   registerUser(req: Request, res: Response, next: NextFunction): Promise<Response<any>>
+  getRefreshToken(req: Request, res: Response, next: NextFunction): Promise<Response<any>>
 }
 class AuthController implements IAuthControllerHttpMethods {
   async login (req: Request, res: Response, next: NextFunction) {
@@ -40,6 +41,15 @@ class AuthController implements IAuthControllerHttpMethods {
       const role = user.realm_access?.roles.find(r => r === "API")
       const httpStatus = await factory.createUser.execute({ ...userRequestData, enabled: role ? false : userRequestData.enabled }, access_token)
       return res.send(httpStatus)
+    } catch (error) {
+      return errorHandler.returnError(error, req, res, next)
+    }
+  }
+
+  async getRefreshToken (req: Request, res: Response, next: NextFunction) {
+    try {
+      const refreshToken = await factory.getTokenDb.execute(req.params.id)
+      return res.json(refreshToken)
     } catch (error) {
       return errorHandler.returnError(error, req, res, next)
     }
